corpus/kernel/6.8/gpu/amdgpu/index.md
---
collection: kernel
version: "6.8"
title: "drm/amdgpu AMDgpu driver"
source_url: https://www.kernel.org/doc/html/v6.8/gpu/amdgpu/index.html
fetched_at: 2026-08-21T03:48:00+00:00
---
# drm/amdgpu AMDgpu driver

The drm/amdgpu driver supports all AMD Radeon GPUs based on the Graphics Core
Next (GCN), Radeon DNA (RDNA), and Compute DNA (CDNA) architectures.

- [Module Parameters](module-parameters.md)
- [Core Driver Infrastructure](driver-core.md)
  - [GPU Hardware Structure](driver-core.md#gpu-hardware-structure)
    - [Graphics and Compute Microcontrollers](driver-core.md#graphics-and-compute-microcontrollers)
  - [Driver Structure](driver-core.md#driver-structure)
  - [Memory Domains](driver-core.md#memory-domains)
  - [Buffer Objects](driver-core.md#buffer-objects)
  - [PRIME Buffer Sharing](driver-core.md#prime-buffer-sharing)
  - [MMU Notifier](driver-core.md#mmu-notifier)
  - [AMDGPU Virtual Memory](driver-core.md#amdgpu-virtual-memory)
  - [Interrupt Handling](driver-core.md#interrupt-handling)
  - [IP Blocks](driver-core.md#ip-blocks)
- [drm/amd/display - Display Core (DC)](display/index.md)
  - [AMDgpu Display Manager](display/display-manager.md)
    - [Lifecycle](display/display-manager.md#lifecycle)
    - [Interrupts](display/display-manager.md#interrupts)
    - [Atomic Implementation](display/display-manager.md#atomic-implementation)
    - [Color Management Properties](display/display-manager.md#color-management-properties)
      - [DC Color Capabilities between DCN generations](display/display-manager.md#dc-color-capabilities-between-dcn-generations)
    - [Blend Mode Properties](display/display-manager.md#blend-mode-properties)
      - [Blend configuration flow](display/display-manager.md#blend-configuration-flow)
  - [Display Core Debug tools](display/dc-debug.md)
    - [DC Visual Confirmation](display/dc-debug.md#dc-visual-confirmation)
      - [Multiple Planes Debug](display/dc-debug.md#multiple-planes-debug)
      - [Pipe Split Debug](display/dc-debug.md#pipe-split-debug)
    - [DTN Debug](display/dc-debug.md#dtn-debug)
    - [DMUB Firmware Debug](display/dc-debug.md#dmub-firmware-debug)
      - [Trace Groups](display/dc-debug.md#trace-groups)
  - [Display Core Next (DCN)](display/dcn-overview.md)
    - [Front End and Back End](display/dcn-overview.md#front-end-and-back-end)
    - [Data Flow](display/dcn-overview.md#data-flow)
    - [AMD Hardware Pipeline](display/dcn-overview.md#amd-hardware-pipeline)
    - [Global Sync](display/dcn-overview.md#global-sync)
  - [Multiplane Overlay (MPO)](display/mpo-overview.md)
    - [Plane Restrictions](display/mpo-overview.md#plane-restrictions)
    - [Cursor Restrictions](display/mpo-overview.md#cursor-restrictions)
    - [Use Cases](display/mpo-overview.md#use-cases)
      - [Picture-in-Picture (PIP) playback - Underlay strategy](display/mpo-overview.md#picture-in-picture-pip-playback-underlay-strategy)
      - [Multiple Display MPO](display/mpo-overview.md#multiple-display-mpo)
        - [Limitations](display/mpo-overview.md#limitations)
  - [DC Glossary](display/dc-glossary.md)
- [dGPU firmware flashing](flashing.md)
  - [IFWI](flashing.md#ifwi)
  - [USB-C PD F/W](flashing.md#usb-c-pd-f-w)
  - [sysfs files](flashing.md#sysfs-files)
- [AMDGPU XGMI Support](xgmi.md)
- [AMDGPU RAS Support](ras.md)
  - [RAS debugfs/sysfs Control and Error Injection Interfaces](ras.md#ras-debugfs-sysfs-control-and-error-injection-interfaces)
  - [RAS Reboot Behavior for Unrecoverable Errors](ras.md#ras-reboot-behavior-for-unrecoverable-errors)
  - [RAS Error Count sysfs Interface](ras.md#ras-error-count-sysfs-interface)
  - [RAS EEPROM debugfs Interface](ras.md#ras-eeprom-debugfs-interface)
  - [RAS VRAM Bad Pages sysfs Interface](ras.md#ras-vram-bad-pages-sysfs-interface)
  - [Sample Code](ras.md#sample-code)
- [GPU Power/Thermal Controls and Monitoring](thermal.md)
  - [HWMON Interfaces](thermal.md#hwmon-interfaces)
  - [GPU sysfs Power State Interfaces](thermal.md#gpu-sysfs-power-state-interfaces)
    - [power_dpm_state](thermal.md#power-dpm-state)
    - [power_dpm_force_performance_level](thermal.md#power-dpm-force-performance-level)
    - [pp_table](thermal.md#pp-table)
    - [pp_od_clk_voltage](thermal.md#pp-od-clk-voltage)
    - [pp_dpm_\*](thermal.md#pp-dpm)
    - [pp_power_profile_mode](thermal.md#pp-power-profile-mode)
    - [\*_busy_percent](thermal.md#busy-percent)
    - [gpu_metrics](thermal.md#gpu-metrics)
    - [fan_curve](thermal.md#fan-curve)
    - [acoustic_limit_rpm_threshold](thermal.md#acoustic-limit-rpm-threshold)
    - [acoustic_target_rpm_threshold](thermal.md#acoustic-target-rpm-threshold)
    - [fan_target_temperature](thermal.md#fan-target-temperature)
    - [fan_minimum_pwm](thermal.md#fan-minimum-pwm)
  - [GFXOFF](thermal.md#gfxoff)
    - [`amdgpu_gfxoff`](thermal.md#amdgpu-gfxoff)
    - [`amdgpu_gfxoff_status`](thermal.md#amdgpu-gfxoff-status)
    - [`amdgpu_gfxoff_count`](thermal.md#amdgpu-gfxoff-count)
    - [`amdgpu_gfxoff_residency`](thermal.md#amdgpu-gfxoff-residency)
- [Misc AMDGPU driver information](driver-misc.md)
  - [GPU Product Information](driver-misc.md#gpu-product-information)
    - [product_name](driver-misc.md#product-name)
    - [product_number](driver-misc.md#product-number)
    - [serial_number](driver-misc.md#serial-number)
    - [fru_id](driver-misc.md#fru-id)
    - [manufacturer](driver-misc.md#manufacturer)
    - [unique_id](driver-misc.md#unique-id)
    - [board_info](driver-misc.md#board-info)
    - [Accelerated Processing Units (APU) Info](driver-misc.md#accelerated-processing-units-apu-info)
    - [Discrete GPU Info](driver-misc.md#discrete-gpu-info)
  - [GPU Memory Usage Information](driver-misc.md#gpu-memory-usage-information)
    - [mem_info_vram_total](driver-misc.md#mem-info-vram-total)
    - [mem_info_vram_used](driver-misc.md#mem-info-vram-used)
    - [mem_info_vis_vram_total](driver-misc.md#mem-info-vis-vram-total)
    - [mem_info_vis_vram_used](driver-misc.md#mem-info-vis-vram-used)
    - [mem_info_gtt_total](driver-misc.md#mem-info-gtt-total)
    - [mem_info_gtt_used](driver-misc.md#mem-info-gtt-used)
  - [PCIe Accounting Information](driver-misc.md#pcie-accounting-information)
    - [pcie_bw](driver-misc.md#pcie-bw)
    - [pcie_replay_count](driver-misc.md#pcie-replay-count)
  - [GPU SmartShift Information](driver-misc.md#gpu-smartshift-information)
    - [smartshift_apu_power](driver-misc.md#smartshift-apu-power)
    - [smartshift_dgpu_power](driver-misc.md#smartshift-dgpu-power)
    - [smartshift_bias](driver-misc.md#smartshift-bias)
- [AMDGPU Glossary](amdgpu-glossary.md)
