corpus/kernel/6.17/gpu/amdgpu/index.md
---
collection: kernel
version: "6.17"
title: "drm/amdgpu AMDgpu driver"
source_url: https://www.kernel.org/doc/html/v6.17/gpu/amdgpu/index.html
fetched_at: 2026-09-16T16:39:18+00:00
---
# drm/amdgpu AMDgpu driver

The drm/amdgpu driver supports all AMD Radeon GPUs based on the Graphics Core
Next (GCN), Radeon DNA (RDNA), and Compute DNA (CDNA) architectures.

- [Core Driver Infrastructure](driver-core.md)
  - [GPU Hardware Structure](driver-core.md#gpu-hardware-structure)
  - [GFX, Compute, and SDMA Overall Behavior](driver-core.md#gfx-compute-and-sdma-overall-behavior)
  - [Driver Structure](driver-core.md#driver-structure)
  - [Memory Domains](driver-core.md#memory-domains)
  - [Buffer Objects](driver-core.md#buffer-objects)
  - [PRIME Buffer Sharing](driver-core.md#prime-buffer-sharing)
  - [MMU Notifier](driver-core.md#mmu-notifier)
  - [AMDGPU Virtual Memory](driver-core.md#amdgpu-virtual-memory)
  - [Interrupt Handling](driver-core.md#interrupt-handling)
  - [IP Blocks](driver-core.md#ip-blocks)
- [AMD Hardware Components Information per Product](amd-hardware-list-info.md)
  - [Accelerated Processing Units (APU) Info](amd-hardware-list-info.md#accelerated-processing-units-apu-info)
  - [Discrete GPU Info](amd-hardware-list-info.md#discrete-gpu-info)
- [Module Parameters](module-parameters.md)
- [drm/amdgpu - Graphics and Compute (GC)](gc/index.md)
  - [Graphics (GFX) and Compute Microcontrollers](gc/index.md#graphics-gfx-and-compute-microcontrollers)
    - [MicroEngine Scheduler (MES)](gc/mes.md)
- [drm/amd/display - Display Core (DC)](display/index.md)
  - [DC Code validation](display/index.md#dc-code-validation)
  - [DC Information](display/index.md#dc-information)
    - [AMDgpu Display Manager](display/display-manager.md)
      - [Lifecycle](display/display-manager.md#lifecycle)
      - [Interrupts](display/display-manager.md#interrupts)
      - [Atomic Implementation](display/display-manager.md#atomic-implementation)
      - [Color Management Properties](display/display-manager.md#color-management-properties)
        - [DC Color Capabilities between DCN generations](display/display-manager.md#dc-color-capabilities-between-dcn-generations)
      - [Blend Mode Properties](display/display-manager.md#blend-mode-properties)
        - [Blend configuration flow](display/display-manager.md#blend-configuration-flow)
    - [Display Core Next (DCN)](display/dcn-overview.md)
      - [Front End and Back End](display/dcn-overview.md#front-end-and-back-end)
      - [Data Flow](display/dcn-overview.md#data-flow)
      - [AMD Hardware Pipeline](display/dcn-overview.md#amd-hardware-pipeline)
      - [Global Sync](display/dcn-overview.md#global-sync)
    - [DCN Blocks](display/dcn-blocks.md)
      - [DCHUBBUB](display/dcn-blocks.md#dchubbub)
      - [HUBP](display/dcn-blocks.md#hubp)
      - [DPP](display/dcn-blocks.md#dpp)
      - [MPC](display/dcn-blocks.md#mpc)
      - [OPP](display/dcn-blocks.md#opp)
      - [DIO](display/dcn-blocks.md#dio)
    - [DC Programming Model](display/programming-model-dcn.md)
      - [Overview](display/programming-model-dcn.md#overview)
      - [Display Driver Architecture Overview](display/programming-model-dcn.md#display-driver-architecture-overview)
        - [Basic Objects](display/programming-model-dcn.md#basic-objects)
        - [Basic Operations](display/programming-model-dcn.md#basic-operations)
    - [Multiplane Overlay (MPO)](display/mpo-overview.md)
      - [Plane Restrictions](display/mpo-overview.md#plane-restrictions)
      - [Cursor Restrictions](display/mpo-overview.md#cursor-restrictions)
      - [Use Cases](display/mpo-overview.md#use-cases)
        - [Picture-in-Picture (PIP) playback - Underlay strategy](display/mpo-overview.md#picture-in-picture-pip-playback-underlay-strategy)
        - [Multiple Display MPO](display/mpo-overview.md#multiple-display-mpo)
          - [Limitations](display/mpo-overview.md#limitations)
    - [Display Core Debug tools](display/dc-debug.md)
      - [Narrow down display issues](display/dc-debug.md#narrow-down-display-issues)
        - [DC dmesg important messages](display/dc-debug.md#dc-dmesg-important-messages)
        - [Avoid loading display core](display/dc-debug.md#avoid-loading-display-core)
        - [Display flickering](display/dc-debug.md#display-flickering)
        - [Display artifacts](display/dc-debug.md#display-artifacts)
      - [Disabling/Enabling specific features](display/dc-debug.md#disabling-enabling-specific-features)
      - [DC Visual Confirmation](display/dc-debug.md#dc-visual-confirmation)
        - [Multiple Planes Debug](display/dc-debug.md#multiple-planes-debug)
        - [Pipe Split Debug](display/dc-debug.md#pipe-split-debug)
      - [DTN Debug](display/dc-debug.md#dtn-debug)
      - [Collect Firmware information](display/dc-debug.md#collect-firmware-information)
      - [DMUB Firmware Debug](display/dc-debug.md#dmub-firmware-debug)
        - [Trace Groups](display/dc-debug.md#trace-groups)
    - [AMDGPU - Display Contributions](display/display-contributing.md)
      - [Gitlab issues](display/display-contributing.md#gitlab-issues)
      - [IGT](display/display-contributing.md#igt)
      - [Compilation](display/display-contributing.md#compilation)
        - [Fix compilation warnings](display/display-contributing.md#fix-compilation-warnings)
        - [Fix compilation issues when using um architecture](display/display-contributing.md#fix-compilation-issues-when-using-um-architecture)
      - [Code Refactor](display/display-contributing.md#code-refactor)
        - [Add prefix to DC functions to improve the debug with ftrace](display/display-contributing.md#add-prefix-to-dc-functions-to-improve-the-debug-with-ftrace)
        - [Reduce code duplication](display/display-contributing.md#reduce-code-duplication)
        - [Make atomic_commit_[check|tail] more readable](display/display-contributing.md#make-atomic-commit-check-tail-more-readable)
      - [Documentation](display/display-contributing.md#documentation)
        - [Expand kernel-doc](display/display-contributing.md#expand-kernel-doc)
      - [Beyond AMDGPU](display/display-contributing.md#beyond-amdgpu)
        - [Enable underlay](display/display-contributing.md#enable-underlay)
        - [Adaptive Backlight Modulation (ABM)](display/display-contributing.md#adaptive-backlight-modulation-abm)
        - [HDR & Color management & VRR](display/display-contributing.md#hdr-color-management-vrr)
    - [DC Glossary](display/dc-glossary.md)
- [dGPU firmware flashing](flashing.md)
  - [IFWI](flashing.md#ifwi)
  - [USB-C PD F/W](flashing.md#usb-c-pd-f-w)
  - [sysfs files](flashing.md#sysfs-files)
- [AMDGPU XGMI Support](xgmi.md)
- [AMDGPU RAS Support](ras.md)
  - [RAS debugfs/sysfs Control and Error Injection Interfaces](ras.md#ras-debugfs-sysfs-control-and-error-injection-interfaces)
  - [RAS Reboot Behavior for Unrecoverable Errors](ras.md#ras-reboot-behavior-for-unrecoverable-errors)
  - [RAS Error Count sysfs Interface](ras.md#ras-error-count-sysfs-interface)
  - [RAS EEPROM debugfs Interface](ras.md#ras-eeprom-debugfs-interface)
  - [RAS VRAM Bad Pages sysfs Interface](ras.md#ras-vram-bad-pages-sysfs-interface)
  - [Sample Code](ras.md#sample-code)
- [GPU Power/Thermal Controls and Monitoring](thermal.md)
  - [HWMON Interfaces](thermal.md#hwmon-interfaces)
  - [GPU sysfs Power State Interfaces](thermal.md#gpu-sysfs-power-state-interfaces)
    - [power_dpm_state](thermal.md#power-dpm-state)
    - [power_dpm_force_performance_level](thermal.md#power-dpm-force-performance-level)
    - [pp_table](thermal.md#pp-table)
    - [pp_od_clk_voltage](thermal.md#pp-od-clk-voltage)
    - [pp_dpm_\*](thermal.md#pp-dpm)
    - [pp_power_profile_mode](thermal.md#pp-power-profile-mode)
    - [pm_policy](thermal.md#pm-policy)
    - [\*_busy_percent](thermal.md#busy-percent)
    - [gpu_metrics](thermal.md#gpu-metrics)
    - [fan_curve](thermal.md#fan-curve)
    - [acoustic_limit_rpm_threshold](thermal.md#acoustic-limit-rpm-threshold)
    - [acoustic_target_rpm_threshold](thermal.md#acoustic-target-rpm-threshold)
    - [fan_target_temperature](thermal.md#fan-target-temperature)
    - [fan_minimum_pwm](thermal.md#fan-minimum-pwm)
    - [fan_zero_rpm_enable](thermal.md#fan-zero-rpm-enable)
    - [fan_zero_rpm_stop_temperature](thermal.md#fan-zero-rpm-stop-temperature)
  - [GFXOFF](thermal.md#gfxoff)
    - [`amdgpu_gfxoff`](thermal.md#amdgpu-gfxoff)
    - [`amdgpu_gfxoff_status`](thermal.md#amdgpu-gfxoff-status)
    - [`amdgpu_gfxoff_count`](thermal.md#amdgpu-gfxoff-count)
    - [`amdgpu_gfxoff_residency`](thermal.md#amdgpu-gfxoff-residency)
- [Misc AMDGPU driver information](driver-misc.md)
  - [GPU Product Information](driver-misc.md#gpu-product-information)
    - [product_name](driver-misc.md#product-name)
    - [product_number](driver-misc.md#product-number)
    - [serial_number](driver-misc.md#serial-number)
    - [fru_id](driver-misc.md#fru-id)
    - [manufacturer](driver-misc.md#manufacturer)
    - [unique_id](driver-misc.md#unique-id)
    - [board_info](driver-misc.md#board-info)
  - [GPU Memory Usage Information](driver-misc.md#gpu-memory-usage-information)
    - [mem_info_vram_total](driver-misc.md#mem-info-vram-total)
    - [mem_info_vram_used](driver-misc.md#mem-info-vram-used)
    - [mem_info_vis_vram_total](driver-misc.md#mem-info-vis-vram-total)
    - [mem_info_vis_vram_used](driver-misc.md#mem-info-vis-vram-used)
    - [mem_info_gtt_total](driver-misc.md#mem-info-gtt-total)
    - [mem_info_gtt_used](driver-misc.md#mem-info-gtt-used)
  - [PCIe Accounting Information](driver-misc.md#pcie-accounting-information)
    - [pcie_bw](driver-misc.md#pcie-bw)
    - [pcie_replay_count](driver-misc.md#pcie-replay-count)
  - [GPU SmartShift Information](driver-misc.md#gpu-smartshift-information)
    - [smartshift_apu_power](driver-misc.md#smartshift-apu-power)
    - [smartshift_dgpu_power](driver-misc.md#smartshift-dgpu-power)
    - [smartshift_bias](driver-misc.md#smartshift-bias)
- [GPU Debugging](debugging.md)
  - [General Debugging Options](debugging.md#general-debugging-options)
  - [GPUVM Debugging](debugging.md#gpuvm-debugging)
  - [Decoding a GPUVM Page Fault](debugging.md#decoding-a-gpuvm-page-fault)
  - [UMR](debugging.md#umr)
  - [Debugging backlight brightness](debugging.md#debugging-backlight-brightness)
- [AMDGPU DebugFS](debugfs.md)
  - [DebugFS Files](debugfs.md#debugfs-files)
    - [amdgpu_benchmark](debugfs.md#amdgpu-benchmark)
    - [amdgpu_test_ib](debugfs.md#amdgpu-test-ib)
    - [amdgpu_discovery](debugfs.md#amdgpu-discovery)
    - [amdgpu_vbios](debugfs.md#amdgpu-vbios)
    - [amdgpu_evict_gtt](debugfs.md#amdgpu-evict-gtt)
    - [amdgpu_evict_vram](debugfs.md#amdgpu-evict-vram)
    - [amdgpu_gpu_recover](debugfs.md#amdgpu-gpu-recover)
    - [amdgpu_ring_<name>](debugfs.md#amdgpu-ring-name)
    - [amdgpu_mqd_<name>](debugfs.md#amdgpu-mqd-name)
    - [amdgpu_error_<name>](debugfs.md#amdgpu-error-name)
    - [amdgpu_pm_info](debugfs.md#amdgpu-pm-info)
    - [amdgpu_firmware_info](debugfs.md#amdgpu-firmware-info)
    - [amdgpu_fence_info](debugfs.md#amdgpu-fence-info)
    - [amdgpu_gem_info](debugfs.md#amdgpu-gem-info)
    - [amdgpu_vm_info](debugfs.md#amdgpu-vm-info)
    - [amdgpu_sa_info](debugfs.md#amdgpu-sa-info)
    - [amdgpu_<pool>_mm](debugfs.md#amdgpu-pool-mm)
    - [amdgpu_vram](debugfs.md#amdgpu-vram)
    - [amdgpu_iomem](debugfs.md#amdgpu-iomem)
    - [amdgpu_regs_\*](debugfs.md#amdgpu-regs)
    - [amdgpu_regs2](debugfs.md#amdgpu-regs2)
    - [amdgpu_sensors](debugfs.md#amdgpu-sensors)
    - [amdgpu_gca_config](debugfs.md#amdgpu-gca-config)
    - [amdgpu_wave](debugfs.md#amdgpu-wave)
    - [amdgpu_gpr](debugfs.md#amdgpu-gpr)
    - [amdgpu_gprwave](debugfs.md#amdgpu-gprwave)
    - [amdgpu_fw_attestation](debugfs.md#amdgpu-fw-attestation)
- [AMDGPU Process Isolation](process-isolation.md)
  - [Process Isolation](process-isolation.md#process-isolation)
    - [Partition Handling](process-isolation.md#partition-handling)
  - [Cleaner Shader Execution](process-isolation.md#cleaner-shader-execution)
- [AMDGPU Glossary](amdgpu-glossary.md)
